Fixed a spacing error in talk labels

--- a/css/talks.css
+++ b/css/talks.css
@@ -60,6 +60,8 @@ footer { border-top: 1px solid #d5d5d5; font-size: .8em; }
 .talkBox-labelcontainer { overflow: hidden; display: flex; height: 200px; border-top: 1px solid darkblue; background: #f3f3f3; }
 .talkBox-labellefthalf {line-height: 1em; float: left; display: inline-block; align-items: center; margin-left: 5%; margin-right: 1%; height: 100%; width: 100%; color: #0084bd; }
 .talkBox-labelrighthalf { line-height: 1em; float: right; display: inline-block; align-items: center; margin-left: 1%; margin-right: 5%; height: 100%; width: 100%; color: #0084bd; }
+.talkBox-labellefthalf h4{ color: green; margin-top: 7.5%; text-shadow: 1px 1px black; line-height: 30px; }
+.talkBox-labelrighthalf h4{ color: green; margin-top: 7.5%; text-shadow: 1px 1px black; line-height: 30px; }
 /* Content */
 .talkBox-contentcontainer { overflow: hidden; display: flex; height: 800px; background: white; padding-top: 2%; padding-bottom: 2%; }
 .talkBox-lefthalf { line-height: 1em; float: left; display: flex; align-items: center; margin-left: 5%; margin-right: 1.5%; height: 100%; width: 100%; color: white; clear: bottom; }
